EPMRPP-29618. Fix data overlapping on events monitoring page.

--- a/src/main/resources/public/scss/projectEvents/projectEventsView.scss
+++ b/src/main/resources/public/scss/projectEvents/projectEventsView.scss
@@ -53,6 +53,9 @@
               &.user-grid-cell {
                 width: 15%;
                 font-family: $OpenSansSemibold;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
               }
               &.action-grid-cell {
                 width: 15%;
@@ -64,6 +67,9 @@
               &.object-name-grid-cell {
                 width: 15%;
                 font-family: $OpenSansSemibold;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
               }
               &.old-val-grid-cell {
                 width: 15%;
